adding icons for utility links instead of images

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -10,26 +10,57 @@
             <ul>
                 <li>
                     <a href="https://github.com/grumpydev22?tab=repositories" rel="external">
-                        <img src="assets/images/github.svg" alt="github icon" />
-                        <span class="visually-hidden">github repo for grumpydev22</span>
+                        <!--<img src="assets/images/github.png" alt="github icon" />-->
+                        <!--<span class="visually-hidden">github repo for grumpydev22</span>-->
+                        <!--<style>
+                            #iconmonstr {
+                                width: 32px;
+                            }
+                        </style>
+                        <svg version="1.1" id="iconmonstr"
+                            xmlns="http://www.w3.org/2000/svg" 
+                            xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                            viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve">
+                                <path id="github-5" d="M12,2c5.514,0,10,4.486,10,10s-4.486,10-10,10C6.486,22,2,17.514,2,12S6.486,2,12,2z M12,0
+                                C5.373,0,0,5.373,0,12s5.373,12,12,12s12-5.373,12-12S18.627,0,12,0z M12,6c-3.314,0-6,2.686-6,6c0,2.651,1.719,4.9,4.103,5.693
+                                c0.3,0.056,0.397-0.13,0.397-0.289v-1.117C8.831,16.65,8.483,15.58,8.483,15.58c-0.273-0.693-0.666-0.878-0.666-0.878
+                                c-0.544-0.373,0.041-0.365,0.041-0.365c0.603,0.043,0.92,0.619,0.92,0.619c0.535,0.917,1.403,0.652,1.746,0.498
+                                c0.054-0.388,0.209-0.652,0.381-0.802c-1.333-0.152-2.733-0.667-2.733-2.965c0-0.655,0.234-1.19,0.618-1.61
+                                C8.727,9.925,8.522,9.314,8.848,8.488c0,0,0.504-0.161,1.65,0.615C10.977,8.97,11.49,8.904,12,8.901
+                                c0.51,0.002,1.023,0.069,1.503,0.202c1.146-0.776,1.648-0.615,1.648-0.615c0.327,0.826,0.121,1.436,0.06,1.588
+                                c0.385,0.42,0.617,0.955,0.617,1.61c0,2.305-1.404,2.812-2.74,2.961c0.216,0.186,0.412,0.551,0.412,1.111c0,0.803,0,1.449,0,1.647
+                                c0,0.16,0.096,0.347,0.4,0.288C16.283,16.898,18,14.65,18,12C18,8.686,15.313,6,12,6z"/>
+                        </svg>-->
+                        <i class="icon icon-github">
+                            <span class="visually-hidden">github repo for grumpydev22</span>
+                        </i>
                     </a>
                 </li>
                 <li>
                     <a href="https://twitter.com/andy_blackledge" rel="external">
-                        <img src="assets/images/twitter.svg" alt="twitter icon" />
-                        <span class="visually-hidden">twitter account for @andyblackledge</span>
+                        <!--<img src="assets/images/twitter.svg" alt="twitter icon" />
+                        <span class="visually-hidden">twitter account for @andyblackledge</span>-->
+                        <i class="icon icon-twitter">
+                            <span class="visually-hidden">twitter account for @andyblackledge</span>
+                        </i>
                     </a>
                 </li>
                 <li>
                     <a href="https://uk.linkedin.com/pub/andrew-blackledge/b0/375/7b4" rel="external">
-                        <img src="assets/images/linkedin.svg" alt="linkedin icon" />
-                        <span class="visually-hidden">linkedin account for andy blackledge</span>
+                        <!--<img src="assets/images/linkedin.svg" alt="linkedin icon" />
+                        <span class="visually-hidden">linkedin account for andy blackledge</span>-->
+                        <i class="icon icon-linkedin">
+                            <span class="visually-hidden">linkedin account for andy blackledge</span>
+                        </i>
                     </a>
                 </li>
                 <li>
                     <a href="mailto:blackledge22@gmail.com" rel="external">
-                        <img src="assets/images/email.svg" alt="email icon" />
-                        <span class="visually-hidden">email link for blackledge22@gmail.com</span>
+                        <!--<img src="assets/images/email.svg" alt="email icon" />
+                        <span class="visually-hidden">email link for blackledge22@gmail.com</span>-->
+                        <i class="icon icon-email">
+                            <span class="visually-hidden">email link for blackledge22@gmail.com</span>
+                        </i>
                     </a>
                 </li>
             </ul>
