--- a/sass/style.scss
+++ b/sass/style.scss
@@ -14,6 +14,7 @@
 @import 'scaffolding/_forms';
 @import 'scaffolding/_layout';
 @import 'scaffolding/_fonts';
+@import 'scaffolding/_icons';
 @import 'scaffolding/_lists';
 @import 'scaffolding/_type';
 
