--- a/sass/components/buttons.scss
+++ b/sass/components/buttons.scss
@@ -199,3 +199,31 @@ button::-moz-focus-inner {
 		border: none;
 	}
 }
+
+
+// standard links
+.link-style-a {
+	position: relative;
+	transition: color 250ms ease;
+
+	&:after {
+		transition: width 300ms, color 250ms ease;
+		content: '';
+		display: block;
+		height: 1px;
+		background: $brand-color-a;
+		width: 0%;
+		left: 50%;
+		position: relative;
+		transform: translateX(-50%);
+	}
+	
+	&:hover,
+	&:focus {
+		color: $brand-color-a;
+
+		&:after {
+			width: 80%;
+		}
+	}
+}
