--- a/sass/components/header.scss
+++ b/sass/components/header.scss
@@ -1,6 +1,7 @@
 // header.scss
 
 .header {
+    display: flex;
     float: left;
     width: 100%;
     padding: $vr*4 $ggw/2;
@@ -10,8 +11,50 @@
     } 
 }
 
+.header-inner {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
 .header-logo {
-    @extend .visually-hidden;
+   align-self: flex-start;
+   line-height: 0;
+   margin-bottom: 0;
+   width: 40px;
+
+   a {
+       display: block;
+   }
+}
+
+.navigation-menu {
+
+    @media (max-width: "$break-point-d") {
+        position: fixed;
+        top: 90px;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        border-top: solid 5px $brand-color-a;
+        background: #fff;
+        padding: 10px;
+        z-index: 1;
+        transform: translateY(100%);
+        transition: transform 350ms ease-in;
+    }
+
+    .navigation-menu-in & {
+        transform: none;
+    }
+
+    @media #{$BPD} {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        align-items: center;
+        
+    }
 }
 
 .primary-navigation,
@@ -57,15 +100,58 @@
         float: right;
     }
 
-    .icon {
-        font-size: 32px;
-    }
-
     a {
+        display: block;
         transition: color 250ms ease;
 
         &:hover {
             color: $brand-color-a;
         }
+    }
+
+    .icon {
+        vertical-align: middle;
+        font-size: 32px;
+    }
+
+}
+
+.navigation-menu-actions {
+    display: flex;
+
+    @media #{$BPD} {
+        display: none;
+    }
+}
+
+.navigation-menu-btn {
+
+    .icon {
+        transition: color 250ms ease;
+        font-size: 28px;
+        vertical-align: middle;
+        color: $brand-color-e;
+    }
+
+    &:hover {
+
+        .icon {
+            color: $brand-color-a;
+        }
+    }
+}
+
+.navigation-menu-open {
+    display: block;
+
+    .navigation-menu-in & {
+        display: none;
+    }
+}
+.navigation-menu-close {
+    display: none;
+
+    .navigation-menu-in & {
+        display: block;
     }
 }
