--- a/sass/scaffolding/_icons.scss
+++ b/sass/scaffolding/_icons.scss
@@ -30,6 +30,12 @@
     }
 }
 
+.icon-close:before {
+    content: "\e904";
+}
+.icon-menu:before {
+    content: "\e905";
+}
 .icon-email:before {
     content: "\e900";
 }
