--- a/css/style.css
+++ b/css/style.css
@@ -1134,10 +1134,11 @@ button::-moz-focus-inner {
     left: 50%;
     position: relative;
     transform: translateX(-50%); }
-  .link-style-a:hover, .primary-navigation li a:hover, .link-style-a:focus, .primary-navigation li a:focus {
-    color: #3084EC; }
-    .link-style-a:hover:after, .primary-navigation li a:hover:after, .link-style-a:focus:after, .primary-navigation li a:focus:after {
-      width: 80%; }
+  @media (min-width: 48em) {
+    .link-style-a:hover, .primary-navigation li a:hover, .link-style-a:focus, .primary-navigation li a:focus {
+      color: #3084EC; }
+      .link-style-a:hover:after, .primary-navigation li a:hover:after, .link-style-a:focus:after, .primary-navigation li a:focus:after {
+        width: 80%; } }
 
 .header {
   display: -ms-flexbox;
@@ -1161,9 +1162,12 @@ button::-moz-focus-inner {
   align-self: flex-start;
   line-height: 0;
   margin-bottom: 0;
-  width: 40px; }
+  width: 46px; }
   .header-logo a {
     display: block; }
+
+.svg-logo {
+  fill: #3084EC; }
 
 @media (max-width: 48em) {
   .navigation-menu {
@@ -1177,7 +1181,7 @@ button::-moz-focus-inner {
     padding: 10px;
     z-index: 1;
     transform: translateY(100%);
-    transition: transform 350ms ease-in; } }
+    transition: transform 350ms ease; } }
 
 .navigation-menu-in .navigation-menu {
   transform: none; }
@@ -1197,31 +1201,50 @@ button::-moz-focus-inner {
   float: left;
   width: 100%;
   text-align: center; }
-  @media (min-width: 37.5em) {
+  @media (min-width: 48em) {
     .primary-navigation,
     .utility-navigation {
       width: auto;
       text-align: left; } }
   .primary-navigation li,
   .utility-navigation li {
-    display: inline-block;
-    margin: 0 10px; }
+    display: block;
+    border-bottom: solid 2px #3084EC; }
+    @media (min-width: 48em) {
+      .primary-navigation li,
+      .utility-navigation li {
+        display: inline-block;
+        margin: 0 10px; } }
   .primary-navigation a,
   .utility-navigation a {
+    display: block;
+    padding: 12px 0;
     color: #404040;
     text-transform: lowercase; }
+    @media (min-width: 48em) {
+      .primary-navigation a,
+      .utility-navigation a {
+        padding: 0; } }
 
 .utility-navigation {
-  margin-bottom: 6px; }
-  @media (min-width: 37.5em) {
+  margin-bottom: 6px;
+  margin-top: 24px; }
+  @media (min-width: 48em) {
     .utility-navigation {
-      margin-bottom: 0;
+      margin: 0;
       float: right; } }
+  .utility-navigation li {
+    display: inline-block;
+    border: none; }
   .utility-navigation a {
     display: block;
+    padding: 12px 10px;
     transition: color 250ms ease; }
     .utility-navigation a:hover {
       color: #3084EC; }
+    @media (min-width: 48em) {
+      .utility-navigation a {
+        padding: 12px 0; } }
   .utility-navigation .icon {
     vertical-align: middle;
     font-size: 2rem; }
