--- a/sass/components/header.scss
+++ b/sass/components/header.scss
@@ -21,11 +21,15 @@
    align-self: flex-start;
    line-height: 0;
    margin-bottom: 0;
-   width: 40px;
+   width: 46px;
 
    a {
        display: block;
    }
+}
+
+.svg-logo {
+    fill: $brand-color-a;
 }
 
 .navigation-menu {
@@ -41,7 +45,7 @@
         padding: 10px;
         z-index: 1;
         transform: translateY(100%);
-        transition: transform 350ms ease-in;
+        transition: transform 350ms ease;
     }
 
     .navigation-menu-in & {
@@ -63,7 +67,7 @@
     width: 100%;
     text-align: center;
 
-    @media #{$BPC} {
+    @media #{$BPD} {
         width: auto;
         text-align: left;
     }
@@ -73,13 +77,24 @@
     }
 
     li {
-        display: inline-block;
-        margin: 0 $ggw/2;
+        display: block;
+        border-bottom: solid 2px $brand-color-a;
+
+        @media #{$BPD} {
+            display: inline-block;
+            margin: 0 $ggw/2;
+        }
     }
 
     a {
+        display: block;
+        padding: $vr*2 0;
         color: $brand-color-e;
         text-transform: lowercase;
+
+        @media #{$BPD} {
+            padding: 0;
+        }
     }
 }
 
@@ -94,18 +109,29 @@
 
 .utility-navigation {
     margin-bottom: $vr;
+    margin-top: $vr*4;
    
-    @media #{$BPC} {
-        margin-bottom: 0;
+    @media #{$BPD} {
+        margin: 0;
         float: right;
+    }
+
+    li {
+        display: inline-block;
+        border: none;
     }
 
     a {
         display: block;
+        padding: $vr*2 $ggw/2;
         transition: color 250ms ease;
 
         &:hover {
             color: $brand-color-a;
+        }
+
+        @media #{$BPD} {
+            padding: $vr*2 0;
         }
     }
 
