adding some about info

--- a/app/about/about.component.html
+++ b/app/about/about.component.html
@@ -1,1 +1,72 @@
-<h2>About</h2>
+
+<section class="section section-style-a block block-size-a">
+    <header class="section-header">
+        <h2 class="section-title">
+            About
+        </h2>
+    </header>
+    <div class="section-body">
+        <article class="article article-style-a">
+            <header class="article-header">
+                <h2 class="article-title">A little about me</h2>
+            </header>
+            <div class="article-body">
+                <p>
+                    I'm a front end developer currently working at <a href="http://www.building-blocks.com" rel="external">Building Blocks</a> where I've been since April 2012.
+                </p>
+                <p>
+                    I started out here as a junior dev on the service desk and then moved onto the front end team in September 2013, I'm now a senior member of this team and am lead FE dev on the projects I work on. Builidng Blocks tends to work with large international organisations so the projects I work on will normally be large site builds (as opposed to only building a microsite or landing page) starting from scratch with new designs provided to us and generally I have quite a lot of freedom in the build process (although everything does have to work as part of a CMS).
+                </p>
+                <p>
+                    I've been working in the industry since June 2011 so the vast majority of my career to date has been with Building Blocks, prior to this I worked at a very small agency called "Gold Search Media" which is no longer around (pretty sure that's unrelated to me working there though...).
+                </p>
+            </div>
+        </article>
+        <article class="article article-style-a">
+            <header class="article-header">
+                <h2 class="article-title">Some technical info</h2>
+            </header>
+            <div class="article-body">
+                <section class="section section-style-b">
+                    <header class="section-header">
+                        <h2 class="section-title">I mainly use...</h2>
+                    </header>
+                    <div class="section-body">
+                        <ul class="list-style-a">
+                            <li>HTML</li>
+                            <li>Handlebars with assemble</li>
+                            <li>Less</li>
+                            <li>jQuery</li>
+                            <li>Grunt</li>
+                            <li>Git</li>
+                        </ul>
+                    </div>
+                </section>
+                <section class="section section-style-b">
+                    <header class="section-header">
+                        <h2 class="section-title">I sometimes use...</h2>
+                    </header>
+                    <div class="section-body">
+                        <ul class="list-style-a">
+                            <li>Vanilla JS</li>
+                            <li>Sass (scss)</li>
+                            <li>Gulp</li>
+                        </ul>
+                    </div>
+                </section>
+                <section class="section section-style-b">
+                    <header class="section-header">
+                        <h2 class="section-title">I have recently been building with and enjoy...</h2>
+                    </header>
+                    <div class="section-body">
+                        <ul class="list-style-a">
+                            <li>Node.js</li>
+                            <li>Angular2 with TypeScript</li>
+                            <li>CouchDB</li>
+                        </ul>
+                    </div>
+                </section>
+            </div>
+        </article>
+    </div>
+</section>
