--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,6 +23,10 @@
 @import 'components/header';
 @import 'components/footer';
 @import 'components/intro';
+@import 'components/tabs';
+@import 'components/accordion';
+@import 'components/sections';
+@import 'components/articles';
 
 // Helpers
 @import 'utilities/utilities';
