--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -38,6 +38,14 @@ a {
 	text-decoration: none;
 }
 
+p {
+	a {
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+}
+
 // For lock scroll module
 .scroll-measure {
 	height: 40px;
