--- a/sass/scaffolding/_type.scss
+++ b/sass/scaffolding/_type.scss
@@ -6,7 +6,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: $font-family-title;
+	font-family: $font-family-title-bold;
 	margin-top: 0;
 
 	a {
@@ -84,5 +84,8 @@ h6,
 }
 
 p {
-	margin-bottom: $vr*3;
+	margin-top: 0;
+	margin-bottom: $vr*2;
+	font-size: 16px;
+	line-height: $vr*3;
 }
