--- a/sass/utilities/utilities.scss
+++ b/sass/utilities/utilities.scss
@@ -44,6 +44,30 @@
 	}
 }
 
+.visually-hidden-bpd {
+
+	@media #{$BPD} {
+		border: 0;
+		clip: rect(0 0 0 0);
+		height: 1px;
+		margin: -1px;
+		overflow: hidden;
+		padding: 0;
+		position: absolute;
+		width: 1px;
+
+		&.focusable:active,
+		&.focusable:focus {
+			clip: auto;
+			height: auto;
+			margin: 0;
+			overflow: visible;
+			position: static;
+			width: auto;
+		}
+	}
+}
+
 .no-transition,
 .no-transition * {
 	transition: none!important;
