adding more content

--- a/app/about/about.component.html
+++ b/app/about/about.component.html
@@ -27,14 +27,20 @@
                 <h2 class="article-title">Some technical info</h2>
             </header>
             <div class="article-body">
+                <p>
+                    In front end dev there's a ridiculous amount of tools and frameworks etc, available to use in order to build sites and there are new things being created all the time. I have my favourites like everyone else and I try to keep up to date with the latest trends, I've listed below what I use regularly. 
+                </p>
+                <p>
+                    My preferred approach to building is to create things in a very modular fashion rather than on a page basis, this our standard way to build at Building Blocks and it's very useful when building for a CMS. This is reflected in my class naming (e.g. .promo .promo-style-a), I find this way of naming helps me to really break down what a component/module is rather than what it's being used for in the context of one particular design.
+                </p>
+
                 <section class="section section-style-b">
                     <header class="section-header">
                         <h2 class="section-title">I mainly use...</h2>
                     </header>
                     <div class="section-body">
                         <ul class="list-style-a">
-                            <li>HTML</li>
-                            <li>Handlebars with assemble</li>
+                            <li>Handlebars with Assemble</li>
                             <li>Less</li>
                             <li>jQuery</li>
                             <li>Grunt</li>
@@ -56,13 +62,17 @@
                 </section>
                 <section class="section section-style-b">
                     <header class="section-header">
-                        <h2 class="section-title">I have recently been building with and enjoy...</h2>
+                        <h2 class="section-title">I have also used and enjoy...</h2>
                     </header>
                     <div class="section-body">
                         <ul class="list-style-a">
                             <li>Node.js</li>
                             <li>Angular2 with TypeScript</li>
                             <li>CouchDB</li>
+                            <li>FireBase</li>
+                            <li>Mapbox api</li>
+                            <li>Google Maps api (V3)</li>
+                            <li>Youtube Iframe api</li>
                         </ul>
                     </div>
                 </section>
