--- a/sass/style.scss
+++ b/sass/style.scss
@@ -27,6 +27,7 @@
 @import 'components/accordion';
 @import 'components/sections';
 @import 'components/articles';
+@import 'components/profile';
 
 // Helpers
 @import 'utilities/utilities';
