--- a/app/about/about.component.html
+++ b/app/about/about.component.html
@@ -11,15 +11,20 @@
                 <h2 class="article-title">A little about me</h2>
             </header>
             <div class="article-body">
-                <p>
-                    I'm a front end developer currently working at <a href="http://www.building-blocks.com" rel="external">Building Blocks</a> where I've been since April 2012.
-                </p>
-                <p>
-                    I started out here as a junior dev on the service desk and then moved onto the front end team in September 2013, I'm now a senior member of this team and am lead FE dev on the projects I work on. Builidng Blocks tends to work with large international organisations so the projects I work on will normally be large site builds (as opposed to only building a microsite or landing page) starting from scratch with new designs provided to us and generally I have quite a lot of freedom in the build process (although everything does have to work as part of a CMS).
-                </p>
-                <p>
-                    I've been working in the industry since June 2011 so the vast majority of my career to date has been with Building Blocks, prior to this I worked at a very small agency called "Gold Search Media" which is no longer around (pretty sure that's unrelated to me working there though...).
-                </p>
+                <div class="profile-copy">
+                    <p>
+                        I'm a front end developer currently working at <a href="http://www.building-blocks.com" rel="external">Building Blocks</a> where I've been since April 2012.
+                    </p>
+                    <p>
+                        I started out here as a junior dev on the service desk and then moved onto the front end team in September 2013, I'm now a senior member of this team and am lead FE dev on the projects I work on. Builidng Blocks tends to work with large international organisations so the projects I work on will normally be large site builds (as opposed to only building a microsite or landing page) starting from scratch with new designs provided to us and generally I have quite a lot of freedom in the build process (although everything does have to work as part of a CMS).
+                    </p>
+                    <p>
+                        I've been working in the industry since June 2011 so the vast majority of my career to date has been with Building Blocks, prior to this I worked at a very small agency called "Gold Search Media" which is no longer around (pretty sure that's unrelated to me working there though...).
+                    </p>
+                </div>
+                <figure class="profile-media">
+                    <img src="assets/images/andy.jpg" alt="picture of andy blackledge" />
+                </figure>
             </div>
         </article>
         <article class="article article-style-a">
